Refactoring TextActionTest